# Battaglia-Navale

./: CMakeLists.txt  README.md  main.cpp
backup/: backing.cpp  backing.h  bkGame(CPP)  bkMain(CPP)  bkPlayer(CPP)  bkShip(CPP)  bkShip(H)  log.txt
backup/fileBK/: log.txt  logCC.txt  logPC.txt
backup/replay_bk/: replay.h
file/: copy.txt.txt  log.txt  logCC.txt  logPC.txt
headers/: backing.h  coords.h  game.h  matrix.h  player.h  random.h  replay.h  replayPlayer.h  ship.h
sources/: backing.cpp  battaglia_navale.cpp  coords.cpp  game.cpp  matrix.cpp  player.cpp  random.cpp  replay.cpp  replayPlayer.cpp  ship.cpp
